# models-client-python

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  semantic.yml
models_client_python/: chunker.py  client.py  embedder.py  ranker.py  sparse_embedder.py
models_client_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models_client_python/common/: client.py  content.py  datatype.py  host.py  input.py  output.py  requester.py
models_client_python/requester_grpc/: postprocess.py  preprocess.py  requester.py  requester_async.py
playground/: README.md
playground/chunker/: grpc_batch_request.py
playground/embedder/: grpc_async_request.py  grpc_batch_request.py
playground/ranker/: grpc_single_request.py
src/models_client_python/test/: __init__.py  test_embedder_client.py  test_embedder_compare_with_nvidia_client.py
src/models_client_python/test/data/: results.json
test/: __init__.py  test_embedder_client.py  test_embedder_compare_with_nvidia_client.py
