[project]
name = "models_client_python"
version = "0.1.0"
description = "This package is used to communicate with Clinia's models that are deployed with Triton Inference Server"
readme = "README.md"
requires-python = ">=3.11,<3.12.0"
authors = [
    { name = "Daniel Buades Marcos", email = "daniel.buades@clinia.com" },
    { name = "Etienne Soulard-Geoffrion", email = "etienne.soulard-geoffrion@clinia.com" },
]

# We need to match gRPC dependencies with those of the official client: https://github.com/triton-inference-server/client/blob/main/src/python/library/requirements/requirements_grpc.txt
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "grpcio==1.68",
    "protobuf>=5.26.1,<6.0dev",
    "pydantic>=2.10.3",
]

# [project.optional-dependencies]
# tritonclient = [
#   "tritonclient[grpc]==2.46.0" # Only used for comparing the grpc generated client to that of Nvidia
# ]

[dependency-groups]
dev = [
    "ruff==0.8.2",
    "pre-commit==3.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.25.3",
]

[tool.uv]
package=true
default-groups = ["dev"]

[tool.setuptools.packages.find]
include = ["models_client_python", "models_client_python.*"]

## Test
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = [
  "models_client_python"
]
omit = [
  "models_client_python/requester_grpc/gen/*"
]
relative_files = true
branch = true
parallel = true

## Imports and formatting
[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["gen"]

[tool.ruff.lint]
ignore = ["C901", "E501", "F401", "F403", "F841", "W605"]
select = ["B", "B9", "C", "E", "F", "W", "I001"]

[tool.ruff.lint.mccabe]
max-complexity = 18

# lsp
[tool.pyright]
# allow uncomplete types e.g. tuple instead of tuple[str]
typeCheckingMode = "standard"
